force-app/main/default/objects/Meeting__c/Meeting__c.object-meta.xml
<CustomObject>
    <description>The record of a meeting</description>
    <label>Meeting</label>
    <nameField>
        <displayFormat>MEET-{000000}</displayFormat>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meeting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>