force-app/main/default/objects/Meeting__c/fields/CreatedFromMeetingId__c.field-meta.xml
<CustomField>
    <fullName>CreatedFromMeetingId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Set meeting template Id to copy information from.</description>
    <label>Meeting Template</label>
    <referenceTo>Meeting__c</referenceTo>
    <relationshipLabel>Meetings Created from Template</relationshipLabel>
    <relationshipName>MeetingOfTemplate</relationshipName>
    <type>Lookup</type>
</CustomField>