force-app/main/default/objects/Meeting__c/fields/DateTime__c.field-meta.xml
<CustomField>
    <fullName>DateTime__c</fullName>
    <description>Meeting date and time</description>
    <label>Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>