force-app/main/default/objects/Meeting__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Objectives up to 2000 characters.</description>
    <inlineHelpText>Objectives up to 2000 characters</inlineHelpText>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>