force-app/main/default/objects/Meeting__c/fields/IsTemplate__c.field-meta.xml
<CustomField>
    <fullName>IsTemplate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identify the meeting as a template for creating new meetings bringing some basic information and attendees.</description>
    <label>Is Template</label>
    <type>Checkbox</type>
</CustomField>