force-app/main/default/objects/Meeting__c/fields/MeetingType__c.field-meta.xml
<CustomField>
    <fullName>MeetingType__c</fullName>
    <label>Meeting Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Consultative</fullName>
            </value>
            <value>
                <fullName>Definition</fullName>
            </value>
            <value>
                <fullName>Deliberative</fullName>
            </value>
            <value>
                <fullName>Expository</fullName>
            </value>
            <value>
                <fullName>Information</fullName>
            </value>
            <value>
                <fullName>Not defined</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>