force-app/main/default/objects/Meeting__c/fields/ProjectId__c.field-meta.xml
<CustomField>
    <fullName>ProjectId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Id of the project that generated this meeting, if exists.</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Meeting</relationshipLabel>
    <relationshipName>ProjectsOfMeetings</relationshipName>
    <type>Lookup</type>
</CustomField>