force-app/main/default/objects/Meeting__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>Title of the meeting</description>
    <label>Title</label>
    <length>150</length>
    <type>Text</type>
</CustomField>