force-app/main/default/objects/Meeting__c/fields/Venue__c.field-meta.xml
<CustomField>
    <fullName>Venue__c</fullName>
    <description>Where the meeting will take place</description>
    <label>Venue</label>
    <length>150</length>
    <type>Text</type>
</CustomField>