force-app/main/default/objects/Meeting__c/listViews/Tudo.listView-meta.xml
<ListView>
    <fullName>Tudo</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Description__c</columns>
    <columns>DateTime__c</columns>
    <columns>MeetingType__c</columns>
    <columns>Frequency__c</columns>
    <columns>ProjectId__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>Tudo</label>
    <language>en_US</language>
</ListView>